--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-plus": "^2.7.3",
     "nes.css": "^2.3.0",
     "vue": "^3.3.4",
+    "vue-gtag": "^2.0.1",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
